--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <p>welcome</p>
 <p>from karnatak</p>
 <p>nidasoshi</p>
+<div style = "height: 300px; width: 300px; background-color: skyblue; margin: auto;">
+
+</div>
