--- a/index.html
+++ b/index.html
@@ -4,3 +4,7 @@
 <div style = "height: 300px; width: 300px; background-color: skyblue; margin: auto;">
 
 </div>
+
+<div style = "height: 300px; width: 300px; background-color:palevioletred ; margin: auto;">
+
+</div>
